--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Install python3-protobuf
+      run: sudo apt-get install -y python3-protobuf
     - name: cmake
       run: mkdir -p build && cd build && cmake ..
     - name: make
