feat: Moved mercury login to a separate thread

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,8 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/nanopb/extra)
 find_package(Nanopb REQUIRED)
 include_directories(${NANOPB_INCLUDE_DIRS})
 
+set(THREADS_PREFER_PTHREAD_FLAG ON)
+find_package(Threads REQUIRED)
 
 set(PROTOS protocol/proto/authentication.proto protocol/proto/keyexchange.proto protocol/proto/mercury.proto protocol/proto/metadata.proto protocol/proto/playlist.proto protocol/proto/pubsub.proto protocol/proto/radio.proto protocol/proto/spirc.proto)
 message(${PROTOS})
@@ -26,4 +28,4 @@ set_source_files_properties(${PROTO_SRCS} ${PROTO_HDRS}
 file(GLOB SOURCES "src/*.cpp" "src/*.c")
  
 add_executable(cspot ${SOURCES} ${PROTO_SRCS})
-target_link_libraries(cspot OpenSSL::Crypto)
+target_link_libraries(cspot OpenSSL::Crypto Threads::Threads)
