--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Install python dependencies
+      run: python3 -m pip install --upgrade pip3 setuptools wheel
     - name: Install python3-protobuf
       run: sudo pip3 install protobuf grpcio-tools
     - name: cmake
