--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         submodules: true
     - name: Install python dependencies
-      run: python3 -m pip install --upgrade pip3 setuptools wheel
+      run: python3 -m pip install --upgrade pip setuptools wheel
     - name: Install python3-protobuf
       run: sudo pip3 install protobuf grpcio-tools
     - name: cmake
