feat: Added mbedtls support

--- a/cli/CMakeLists.txt
+++ b/cli/CMakeLists.txt
@@ -1,4 +1,4 @@
-project(cspot)
+project(cspotcli)
 cmake_minimum_required(VERSION 3.18) 
 set (CMAKE_CXX_STANDARD 17)
 
@@ -6,5 +6,5 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../cspot ${CMAKE_CURRENT_BINARY_DIR
 
 file(GLOB SOURCES "*.cpp")
  
-add_executable(cspot ${SOURCES})
-target_link_libraries(cspot CSpotLib ${CMAKE_DL_LIBS})
+add_executable(cspotcli ${SOURCES})
+target_link_libraries(cspotcli CSpotLib ${CMAKE_DL_LIBS})
