--- a/cspot/CMakeLists.txt
+++ b/cspot/CMakeLists.txt
@@ -8,6 +8,14 @@ endif()
 
 include_directories("include")
 include_directories("tremor")
+
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+if (APPLE)
+    set(MBEDTLS_ROOT_DIR /usr/local/Cellar/mbedtls/2.23.0)
+    add_definitions(-DUSE_MBEDTLS)
+endif()
+find_package(mbedTLS REQUIRED)
+
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/nanopb/extra)
 find_package(Nanopb REQUIRED)
 include_directories(${NANOPB_INCLUDE_DIRS})
@@ -29,6 +37,6 @@ set(SOURCES ${SOURCES} "tremor/mdct.c" "tremor/dsp.c" "tremor/info.c" "tremor/mi
  
 
 add_library(CSpotLib STATIC ${SOURCES} ${PROTO_SRCS})
-target_link_libraries(CSpotLib PRIVATE OpenSSL::Crypto Threads::Threads ${CMAKE_DL_LIBS})
+target_link_libraries(CSpotLib PRIVATE mbedtls OpenSSL::Crypto Threads::Threads ${CMAKE_DL_LIBS})
 
-target_include_directories(CSpotLib PUBLIC "include" ${CMAKE_CURRENT_BINARY_DIR} ${NANOPB_INCLUDE_DIRS} "tremor")
+target_include_directories(CSpotLib PUBLIC "include" mbedtls ${CMAKE_CURRENT_BINARY_DIR} ${NANOPB_INCLUDE_DIRS} "tremor")
