--- a/targets/esp32/main/CMakeLists.txt
+++ b/targets/esp32/main/CMakeLists.txt
@@ -1,9 +1,9 @@
 set(COMPONENT_SRCS
     "main.cpp"
-    "I2SAudioSink.cpp"
-    "ac101.c"
+    "sinks/ES9018AudioSink.cpp"
+    "sinks/ac101.c"
 )
-set(COMPONENT_ADD_INCLUDEDIRS ".")
+set(COMPONENT_ADD_INCLUDEDIRS "." "sinks")
 
 register_component(REQUIRES "cspot")
 component_compile_options(-std=c++17)
