--- a/cspot/CMakeLists.txt
+++ b/cspot/CMakeLists.txt
@@ -20,8 +20,12 @@ set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/nanopb/extra)
 find_package(Nanopb REQUIRED)
 include_directories(${NANOPB_INCLUDE_DIRS})
 
+find_package(cJSON REQUIRED)
+include_directories(${CJSON_INCLUDE_DIRS})
+
 include_directories("include")
 include_directories("tremor")
+
 add_definitions(-DPB_ENABLE_MALLOC)
 set(PROTOS protocol/proto/authentication.proto protocol/proto/keyexchange.proto protocol/proto/mercury.proto protocol/proto/metadata.proto protocol/proto/playlist.proto protocol/proto/pubsub.proto protocol/proto/radio.proto protocol/proto/spirc.proto)
 message(${PROTOS})
@@ -34,9 +38,9 @@ set_source_files_properties(${PROTO_SRCS} ${PROTO_HDRS}
 file(GLOB SOURCES "src/*.cpp" "src/*.c")
 
 set(SOURCES ${SOURCES} "tremor/mdct.c" "tremor/dsp.c" "tremor/info.c" "tremor/misc.c" "tremor/floor1.c" "tremor/floor0.c" "tremor/vorbisfile.c" "tremor/res012.c" "tremor/mapping0.c" "tremor/codebook.c" "tremor/framing.c" "tremor/bitwise.c" "tremor/floor_lookup.c")
- 
+
 
 add_library(cspot STATIC ${SOURCES} ${PROTO_SRCS})
-target_link_libraries(cspot PRIVATE ${EXTRA_REQ_LIBS})
+target_link_libraries(cspot PRIVATE ${EXTRA_REQ_LIBS} ${CJSON_LIBRARIES})
 
-target_include_directories(cspot PUBLIC "include" "tremor" ${EXTRA_REQ_LIBS} ${CMAKE_CURRENT_BINARY_DIR} ${NANOPB_INCLUDE_DIRS})
+target_include_directories(cspot PUBLIC "include" "tremor" ${EXTRA_REQ_LIBS} ${CMAKE_CURRENT_BINARY_DIR} ${NANOPB_INCLUDE_DIRS} ${CJSON_INCLUDE_DIRS})
