--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,6 +15,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Setup cmake
+      uses: jwlawson/actions-setup-cmake@v1.3
+      with:
+        cmake-version: '3.18.x'
     - name: Install python dependencies
       run: python3 -m pip install --upgrade pip setuptools wheel
     - name: Install python3-protobuf
