--- a/cspot/CMakeLists.txt
+++ b/cspot/CMakeLists.txt
@@ -16,10 +16,11 @@ else()
 endif()
 
 
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/nanopb/extra)
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/nanopb/extra)
 find_package(Nanopb REQUIRED)
 include_directories(${NANOPB_INCLUDE_DIRS})
 
+set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ${CMAKE_CURRENT_SOURCE_DIR}/cJSON)
 find_package(cJSON REQUIRED)
 include_directories(${CJSON_INCLUDE_DIRS})
 
