--- a/cspot/CMakeLists.txt
+++ b/cspot/CMakeLists.txt
@@ -2,17 +2,23 @@ project(cspot)
 
 cmake_minimum_required(VERSION 2.8.9)
 set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 if(${ESP_PLATFORM})
     add_definitions(-DUSE_MBEDTLS)
     set(EXTRA_REQ_LIBS idf::mbedtls idf::pthread)
     add_definitions(-Wunused-const-variable -Wchar-subscripts -Wunused-label -Wmaybe-uninitialized -Wmisleading-indentation)
-else()
+else()    
+    set(MBEDTLS_ROOT_DIR /usr/local/Cellar/mbedtls/2.23.0)
+    set(SSL_LIBRARY mbedtls)
+    add_definitions(-DUSE_MBEDTLS)
+    find_package(mbedTLS REQUIRED)
+
     find_package(OpenSSL REQUIRED)
     if(OPENSSL_FOUND)
         set(OPENSSL_USE_STATIC_LIBS TRUE)
     endif()
-    set(EXTRA_REQ_LIBS OpenSSL::Crypto Threads::Threads)
+    set(EXTRA_REQ_LIBS OpenSSL::Crypto Threads::Threads mbedtls)
     set(THREADS_PREFER_PTHREAD_FLAG ON)
     find_package(Threads REQUIRED)
 endif()
