--- a/cspot/CMakeLists.txt
+++ b/cspot/CMakeLists.txt
@@ -2,23 +2,21 @@ project(cspot)
 
 cmake_minimum_required(VERSION 2.8.9)
 set (CMAKE_CXX_STANDARD 17)
-set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+
+file(GLOB SOURCES "src/*.cpp" "src/*.c")
 
 if(${ESP_PLATFORM})
-    add_definitions(-DUSE_MBEDTLS)
-    set(EXTRA_REQ_LIBS idf::mbedtls idf::pthread)
+    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/CryptoOpenSSL.cpp)
+    add_definitions(-DCSPOT_USE_MBEDTLS)
+    set(EXTRA_REQ_LIBS idf::mbedtls idf::pthread idf::mdns)
     add_definitions(-Wunused-const-variable -Wchar-subscripts -Wunused-label -Wmaybe-uninitialized -Wmisleading-indentation)
-else()    
-    set(MBEDTLS_ROOT_DIR /usr/local/Cellar/mbedtls/2.23.0)
-    set(SSL_LIBRARY mbedtls)
-    add_definitions(-DUSE_MBEDTLS)
-    find_package(mbedTLS REQUIRED)
-
+else()
+    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/CryptoMbedTLS.cpp)
     find_package(OpenSSL REQUIRED)
     if(OPENSSL_FOUND)
         set(OPENSSL_USE_STATIC_LIBS TRUE)
     endif()
-    set(EXTRA_REQ_LIBS OpenSSL::Crypto Threads::Threads mbedtls)
+    set(EXTRA_REQ_LIBS OpenSSL::Crypto Threads::Threads)
     set(THREADS_PREFER_PTHREAD_FLAG ON)
     find_package(Threads REQUIRED)
 endif()
@@ -44,7 +42,6 @@ add_custom_target(generate_proto_sources DEPENDS ${PROTO_SRCS} ${PROTO_HDRS})
 set_source_files_properties(${PROTO_SRCS} ${PROTO_HDRS}
     PROPERTIES GENERATED TRUE)
 
-file(GLOB SOURCES "src/*.cpp" "src/*.c")
 
 set(SOURCES ${SOURCES} "tremor/mdct.c" "tremor/dsp.c" "tremor/info.c" "tremor/misc.c" "tremor/floor1.c" "tremor/floor0.c" "tremor/vorbisfile.c" "tremor/res012.c" "tremor/mapping0.c" "tremor/codebook.c" "tremor/framing.c" "tremor/bitwise.c" "tremor/floor_lookup.c" "cJSON/cJSON.c")
 
