--- a/.github/workflows/esp-idf.yml
+++ b/.github/workflows/esp-idf.yml
@@ -6,9 +6,7 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: targets/esp32
+
     steps:
     - uses: actions/checkout@v2
       with:
@@ -19,11 +17,7 @@ jobs:
       with:
         path: ${{github.workspace}}/targets/esp32/build
         key: ${{ runner.os }}-esp32-build2
-    - name: Install python dependencies
-      run: python3 -m pip install --upgrade pip setuptools wheel
-    - name: Install python3-protobuf
-      run: sudo pip3 install protobuf grpcio-tools
     - name: Build the firmware
       run: |
-        docker run --rm -v $PWD:/project -w /project espressif/idf idf.py build
+        docker run --rm -v $PWD:/project -w /project espressif/idf /bin/bash -c "python3 -m pip install --upgrade pip setuptools wheel && pip3 install protobuf grpcio-tools && cd targets/esp32 && idf.py build"
         ls -lah build/
