Add dns_sd on mac

--- a/cspot/CMakeLists.txt
+++ b/cspot/CMakeLists.txt
@@ -16,7 +16,7 @@ else()
     if(OPENSSL_FOUND)
         set(OPENSSL_USE_STATIC_LIBS TRUE)
     endif()
-    set(EXTRA_REQ_LIBS OpenSSL::Crypto Threads::Threads)
+    set(EXTRA_REQ_LIBS OpenSSL::Crypto Threads::Threads dns_sd)
     set(THREADS_PREFER_PTHREAD_FLAG ON)
     find_package(Threads REQUIRED)
 endif()
