Add better openssl instllation on macos CI

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -22,7 +22,10 @@ jobs:
       run: sudo apt-get install libavahi-compat-libdnssd-dev
       if: ${{ matrix.os == 'ubuntu-latest' }}
     - name: Install openssl on macos
-      run: brew install openssl && export PATH="/usr/local/opt/openssl/bin:$PATH"
+      run: |
+        brew upgrade openssl
+        brew link --force openssl
+        pkg-config --modversion openssl
       if: ${{ matrix.os == 'macos-latest' }}
     - name: Install python dependencies
       run: python3 -m pip install --upgrade pip setuptools wheel
