Add  export PKG_CONFIG_PATH

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,6 +25,7 @@ jobs:
       run: |
         brew upgrade openssl
         brew link --force openssl
+        export PKG_CONFIG_PATH="/usr/local/opt/openssl@1.0.2t/lib/pkgconfig"
         pkg-config --modversion openssl
       if: ${{ matrix.os == 'macos-latest' }}
     - name: Install python dependencies
