--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -24,8 +24,8 @@ jobs:
     - name: Install openssl on macos
       run: |
         brew upgrade openssl@1.1
-        brew link --force openssl
-        export PKG_CONFIG_PATH="/usr/local/opt/openssl@1.1.0/lib/pkgconfig"
+        brew link --force openssl@1.1
+        export PKG_CONFIG_PATH="/usr/local/opt/openssl@1.1/lib/pkgconfig"
         pkg-config --modversion openssl
       if: ${{ matrix.os == 'macos-latest' }}
     - name: Install python dependencies
