Fix HTTP server on POSIX compliant systems

--- a/targets/cli/CMakeLists.txt
+++ b/targets/cli/CMakeLists.txt
@@ -1,6 +1,7 @@
 project(cspotcli)
 cmake_minimum_required(VERSION 3.18) 
 set (CMAKE_CXX_STANDARD 17)
+set(CMAKE_BUILD_TYPE Debug)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../cspot ${CMAKE_CURRENT_BINARY_DIR}/cspot)
 
