Fix compilation issues on mac os and CI

--- a/targets/cli/CMakeLists.txt
+++ b/targets/cli/CMakeLists.txt
@@ -10,7 +10,8 @@ include_directories(".")
 
 if(UNIX AND NOT APPLE)
     add_definitions(-DCSPOT_ENABLE_ALSA_SINK)
+    set(THINGS_TO_LINK ${THINGS_TO_LINK} asound)
 endif()
 add_executable(cspotcli ${SOURCES})
-target_link_libraries(cspotcli cspot asound ${CMAKE_DL_LIBS})
+target_link_libraries(cspotcli cspot ${CMAKE_DL_LIBS} ${THINGS_TO_LINK})
 get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
