--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         cmake-version: '3.18.x'
     - name: Install avachi libraries (mDNS) and asound
-      run: sudo apt-get install libavahi-compat-libdnssd-dev libasound2-dev alsa-lib
+      run: sudo apt-get install libavahi-compat-libdnssd-dev libasound2-dev
       if: ${{ matrix.os == 'ubuntu-latest' }}
     - name: Install openssl on macos
       run: |
