Try to fix memory leaks by creating PBWrapper

--- a/targets/cli/CMakeLists.txt
+++ b/targets/cli/CMakeLists.txt
@@ -9,8 +9,8 @@ file(GLOB SOURCES "*.cpp")
 include_directories(".")
 
 if(UNIX AND NOT APPLE)
-    add_definitions(-DCSPOT_ENABLE_ALSA_SINK)
-    set(THINGS_TO_LINK ${THINGS_TO_LINK} asound)
+    # add_definitions(-DCSPOT_ENABLE_ALSA_SINK)
+    # set(THINGS_TO_LINK ${THINGS_TO_LINK} asound)
 endif()
 add_executable(cspotcli ${SOURCES})
 target_link_libraries(cspotcli cspot ${CMAKE_DL_LIBS} ${THINGS_TO_LINK})
