--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -25,6 +25,8 @@ jobs:
       run: |
         brew upgrade openssl@1.1
         brew link --force openssl@1.1
+        brew install portaudio
+        brew link --force portaudio
         export PKG_CONFIG_PATH="/usr/local/opt/openssl@1.1/lib/pkgconfig"
         pkg-config --modversion openssl
         echo "PKG_CONFIG_PATH=$PKG_CONFIG_PATH" >> $GITHUB_ENV
