--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -27,7 +27,7 @@ jobs:
         brew link --force openssl@1.1
         brew install portaudio
         brew link --force portaudio
-        export PKG_CONFIG_PATH="/usr/local/opt/openssl@1.1/lib/pkgconfig:/usr/local/Cellar/portaudio/19.6.0/lib/pkgconfig"
+        export PKG_CONFIG_PATH="/usr/local/opt/openssl@1.1/lib/pkgconfig /usr/local/Cellar/portaudio/19.6.0/lib/pkgconfig"
         pkg-config --modversion openssl
         echo "PKG_CONFIG_PATH=$PKG_CONFIG_PATH" >> $GITHUB_ENV
       if: ${{ matrix.os == 'macos-latest' }}
