--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -30,6 +30,7 @@ jobs:
         export PKG_CONFIG_PATH="/usr/local/Cellar/portaudio/19.6.0/lib/pkgconfig"
         export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig"
         pkg-config --modversion openssl
+        pkg-config --modversion portaudio-2.0
         echo "PKG_CONFIG_PATH=$PKG_CONFIG_PATH" >> $GITHUB_ENV
       if: ${{ matrix.os == 'macos-latest' }}
     - name: Install python dependencies
