--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -97,7 +97,8 @@
         "__functional_base_03": "cpp",
         "regex": "cpp",
         "*.inc": "cpp",
-        "*.ipp": "cpp"
+        "*.ipp": "cpp",
+        "cassert": "cpp"
     },
     "C_Cpp.intelliSenseEngineFallback": "Enabled",
     "cmake.sourceDirectory": "${workspaceFolder}/targets/cli"
