--- a/targets/esp32/main/CMakeLists.txt
+++ b/targets/esp32/main/CMakeLists.txt
@@ -4,5 +4,5 @@ set(COMPONENT_SRCS
     "sinks/ac101.c"
 )
 set(COMPONENT_ADD_INCLUDEDIRS "." "sinks")
-register_component(REQUIRES "cspot")
+register_component(REQUIRES "cspot" "wifimanager")
 component_compile_options(-std=gnu++17)
