--- a/.github/workflows/esp-idf.yml
+++ b/.github/workflows/esp-idf.yml
@@ -20,3 +20,4 @@ jobs:
     - name: Build the firmware
       run: |
         docker run --rm -v $PWD:/project -w /project espressif/idf /bin/bash -c "python3 -m pip install --upgrade pip setuptools wheel && pip3 install protobuf grpcio-tools && cd targets/esp32 && idf.py build"
+        ls -la targets/esp32/build
