--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "cspot/nanopb"]
-	path = cspot/nanopb
-	url = https://github.com/nanopb/nanopb
 [submodule "cspot/tremor"]
 	path = cspot/tremor
 	url = https://gitlab.xiph.org/xiph/tremor.git
@@ -8,3 +5,6 @@
 [submodule "cspot/cJSON"]
 	path = cspot/cJSON
 	url = https://github.com/DaveGamble/cJSON.git
+[submodule "cspot/cpp-reflection"]
+	path = cspot/cpp-reflection
+	url = git@github.com:alufers/cpp-reflection.git
