--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -26,6 +26,7 @@ jobs:
         brew upgrade openssl@1.1
         brew link --force openssl@1.1
         brew install portaudio
+        brew install grpc protobuf
         brew link --force portaudio
         export PKG_CONFIG_PATH="/usr/local/Cellar/portaudio/19.6.0/lib/pkgconfig"
         export PKG_CONFIG_PATH="$PKG_CONFIG_PATH:/usr/local/opt/openssl@1.1/lib/pkgconfig"
