--- a/.github/workflows/esp-idf.yml
+++ b/.github/workflows/esp-idf.yml
@@ -11,6 +11,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Install Protoc
+      uses: arduino/setup-protoc@v1
     - name: Cache build
       id: cache-build
       uses: actions/cache@v1
