--- a/cspot/CMakeLists.txt
+++ b/cspot/CMakeLists.txt
@@ -35,22 +35,19 @@ if(${ESP_PLATFORM})
     set(EXTRA_REQ_LIBS idf::mbedtls idf::pthread idf::mdns)
     add_definitions(-Wunused-const-variable -Wchar-subscripts -Wunused-label -Wmaybe-uninitialized -Wmisleading-indentation)
 else()
-    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/CryptoMbedTLS.cpp) # use OpenSSL
-    find_package(OpenSSL REQUIRED)
-    if(OPENSSL_FOUND)
-        set(OPENSSL_USE_STATIC_LIBS TRUE)
-    endif()
-    set(EXTRA_REQ_LIBS OpenSSL::Crypto Threads::Threads)
+    list(REMOVE_ITEM SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/src/CryptoOpenSSL.cpp) # use OpenSSL
     set(THREADS_PREFER_PTHREAD_FLAG ON)
     find_package(Threads REQUIRED)
 endif()
 
 if(UNIX AND NOT APPLE)
-    set(EXTRA_REQ_LIBS ${EXTRA_REQ_LIBS} dns_sd) # add apple bonjur compatibility library for linux
+    set(EXTRA_REQ_LIBS ${EXTRA_REQ_LIBS}) # add apple bonjur compatibility library for linux
     # TODO: migrate from this to native linux mDNS
 endif()
 
 include_directories("cJSON")
+add_subdirectory(mbedtls EXCLUDE_FROM_ALL)
+target_include_directories(mbedtls PUBLIC ./mbedtls/include)
 include_directories("include")
 include_directories("tremor")
 include_directories("${CMAKE_CURRENT_BINARY_DIR}")
@@ -63,6 +60,6 @@ set(SOURCES ${SOURCES} "tremor/mdct.c" "tremor/dsp.c" "tremor/info.c" "tremor/mi
 set(SOURCES ${SOURCES} "protos/AnyRefImpl.cpp" "protos/ReflectTypeInfo.cpp")
 
 add_library(cspot STATIC ${SOURCES})
-target_link_libraries(cspot PRIVATE ${EXTRA_REQ_LIBS})
+target_link_libraries(cspot PRIVATE -static mbedtls ${EXTRA_REQ_LIBS})
 
-target_include_directories(cspot PUBLIC "include" "protos" "tremor" "cJSON" ${EXTRA_REQ_LIBS} ${CMAKE_CURRENT_BINARY_DIR})
+target_include_directories(cspot PUBLIC "include" "protos" "tremor" "mbedtls" "cJSON" ${EXTRA_REQ_LIBS} ${CMAKE_CURRENT_BINARY_DIR})
