--- a/targets/cli/CMakeLists.txt
+++ b/targets/cli/CMakeLists.txt
@@ -9,17 +9,9 @@ add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../cspot ${CMAKE_CURRENT_BINARY_
 file(GLOB SOURCES "*.cpp")
 include_directories(".")
 
-if(UNIX AND NOT APPLE)
-    add_definitions(-DCSPOT_ENABLE_ALSA_SINK)
-    set(THINGS_TO_LINK ${THINGS_TO_LINK} asound)
-else()
-    add_definitions(-DCSPOT_ENABLE_PORTAUDIO_SINK)
-    find_package( portaudio REQUIRED )
-    include_directories( ${PORTAUDIO_INCLUDE_DIRS} )
-    set(THINGS_TO_LINK ${THINGS_TO_LINK} ${PORTAUDIO_LIBRARIES})
-endif()
-
+# add_definitions(-DCSPOT_ENABLE_ALSA_SINK)
+# set(THINGS_TO_LINK ${THINGS_TO_LINK} asound)
 
 add_executable(cspotcli ${SOURCES})
-target_link_libraries(cspotcli cspot ${CMAKE_DL_LIBS} ${THINGS_TO_LINK} )
+target_link_libraries(cspotcli -static cspot ${CMAKE_DL_LIBS} ${THINGS_TO_LINK} )
 get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
