--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "cspot/cpp-reflection"]
 	path = cspot/cpp-reflection
 	url = https://github.com/alufers/cpp-reflection.git
+[submodule "cspot/mbedtls"]
+	path = cspot/mbedtls
+	url = https://github.com/ARMmbed/mbedtls
