--- a/targets/cli/CMakeLists.txt
+++ b/targets/cli/CMakeLists.txt
@@ -5,13 +5,13 @@ set(CMAKE_BUILD_TYPE Debug)
 set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
 add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/../../cspot ${CMAKE_CURRENT_BINARY_DIR}/cspot)
+add_subdirectory(tinyalsa)
 
 file(GLOB SOURCES "*.cpp")
 include_directories(".")
 
-# add_definitions(-DCSPOT_ENABLE_ALSA_SINK)
-# set(THINGS_TO_LINK ${THINGS_TO_LINK} asound)
+add_definitions(-DCSPOT_ENABLE_ALSA_SINK)
 
 add_executable(cspotcli ${SOURCES})
-target_link_libraries(cspotcli -static cspot ${CMAKE_DL_LIBS} ${THINGS_TO_LINK} )
+target_link_libraries(cspotcli cspot -static tinyalsa ${CMAKE_DL_LIBS} ${THINGS_TO_LINK} )
 get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
