--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "cspot/cpp-reflection"]
 	path = cspot/cpp-reflection
 	url = https://github.com/alufers/cpp-reflection.git
+[submodule "targets/esp32/components/esp_littlefs"]
+	path = targets/esp32/components/esp_littlefs
+	url = https://github.com/joltwallet/esp_littlefs.git
