--- a/targets/esp32/main/CMakeLists.txt
+++ b/targets/esp32/main/CMakeLists.txt
@@ -5,6 +5,7 @@ set(COMPONENT_SRCS
     "sinks/BufferedAudioSink.cpp"
     "sinks/ES9018AudioSink.cpp"
     "sinks/PCM5102AudioSink.cpp"
+    "sinks/InternalAudioSink.cpp"
     "sinks/ac101.c"
 )
 set(COMPONENT_ADD_INCLUDEDIRS "." "sinks")
