--- a/targets/esp32/main/CMakeLists.txt
+++ b/targets/esp32/main/CMakeLists.txt
@@ -9,5 +9,5 @@ set(COMPONENT_SRCS
     "sinks/ac101.c"
 )
 set(COMPONENT_ADD_INCLUDEDIRS "." "sinks")
-register_component(REQUIRES "cspot" "esp_littlefs")
+register_component(REQUIRES "cspot")
 component_compile_options(-std=gnu++17)
